route for Playing Chords

--- a/views/html/chords.html
+++ b/views/html/chords.html
@@ -1,23 +1,5 @@
 <center>
-    <!-- Make Chords -->
-    <!-- <div id="video_div"><div id='player' height="390"  width: "640"></div></div>
-    <i id="timer" style="color: black;"></i>
-    <div class="icon-bar">
-        <a class="active" href="#">
-            <i class="fa fa-play" onclick="findSongChords('Dil Mere', 'Local Train');" style="font-size: 7vh"></i>
-        </a>
-        <a href="#">
-            <h2 class = "inline" id="prev_chord" style="color: white; font-size: 5vh">-</h2>
-            <i class = "inline fa fa-angle-right" style="color: grey"></i>
-            <h2 class = "inline" id="chord" style="color: white; font-size: 5vh">-</h2>
-            <i class = "inline fa fa-angle-right" style="color: grey"></i>
-            <h2 class = "inline" id="next_chord" style="color: white; font-size: 5vh">-</h2>
-        </a>
-        <a class="active" href="#">
-            <i class="fa fa-stop" onclick="stopVideo()" style="font-size: 7vh"></i>
-        </a>
-    </div> -->
-    <span class="md-headline"><strong>Search Chords</strong></span>
+    <h2 class="title">Chords Station: Search Chords</h2>
     <md-autocomplete
         md-selected-item="selectedItem"
         md-selected-item-change="getDetails(selectedItem)"
