--- a/views/html/welcome.html
+++ b/views/html/welcome.html
@@ -1,1 +1,6 @@
-<h2> Welcome </h2>
+<center>
+    <h2 class="title">Chords Station</h2>
+    <md-button class="md-raised" ng-href="/#!/DataEntry">Data Entry</md-button>
+    <md-button class="md-raised" ng-href="/#!/Chords">Chords</md-button>
+    <md-button class="md-raised" ng-href="/#!/PlayChords">Play Chords</md-button>
+</center>
