--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="chordsStationApp">
     <head>
         <meta charset="utf-8">
-        <title>Find Chords</title>
+        <title>Chords Station</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
